# real-time-data-processing-class_new

./: .gitignore  lesson-06-teaching-notes.md
lesson-details/en/: lesson-01.md  lesson-02.md
slides/: lesson-01-esp.html  lesson-01.html  lesson-02-esp.html  lesson-02.html  lesson-03.html  lesson-04.html  lesson-05.html  lesson-07.html  real-time-streaming-demo.html
src/: Dockerfile  PLAN.md  README.md  docker-compose.yml  fly.toml  pyproject.toml  start.sh
src-lesson1/demos/: demo_vacuum.py
src-lesson2/: README.md  docker-compose.yml  init.sql  instrument.sql  pyproject.toml
src-lesson2/demos/: demo_distributed_txn.py  demo_latency_injection.py  demo_quorum.py
src-lesson3/: README.md
src-lesson3/scripts/: benchmark_point.py  benchmark_q1_bytes.py  benchmark_q2_rg.py  download_data.sh  download_data_1B.sh
src-lesson3/src/: bench_writes.py  benchmark_queries.py  experiment_ordering.py  experiment_point_query.py  load_postgres.py
src-lesson4/: AGENTS.md  Dockerfile  Makefile  README.md  bench  docker-compose.yml  init.sql  pyproject.toml
src-lesson4/airflow/: Dockerfile
src-lesson4/dagster_app/: Dockerfile  __init__.py  assets.py  definitions.py
src-lesson4/data/: .gitignore
src-lesson4/src/: config.py  experiment_timezone.py  pipeline_failure.py  pipeline_idempotent.py  pipeline_naive.py  pipeline_watermark.py  probe_data.py  prove_idempotent.py  scd2.py  schema_validate.py  seed_data.py
src-lesson5/src/: stream_watch.py
src-lesson6/: Dockerfile  docker-compose.yml  pyproject.toml
src-lesson6/debezium/: docker-compose.debezium.yml  register-orders-connector.json  register.sh
src-lesson6/src/: config.py  (+6 more)
src-lesson7/: docker-compose.yml  lesson-07-teaching-notes.md  pyproject.toml
src-lesson7/src/: config.py  experiment_no_watermark.py  experiment_sliding.py  inject_late.py  seed_events.py  stream_revenue.py  stream_to_kafka.py  watch_progress.py
src/app/: main.py
src/app/static/: dashboard.html  tap.html
src/clickhouse/: init.sql
(+1 files in other folders)
